2014-04-29 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Added CacheManager providing a cache action.

2014-04-04 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Added APIService::getPlanJourney manageDisrupt parameter.
	* Feature: Added LineSelectControl in ConstantsEditorControls.
	* Fix: Missing __wakeup method in Node to make special features in getters to work with unserialized objects.

2014-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Fix: NAViTiA Url size limit workaround. RequestURL in API url can cause calls to fail.

2014-03-12 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Added a parameter to ServiceAPI::CallAPI can bypass caching completly.

2014-02-20 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Bug fix: On second pass, ServiceAPI::CallAPI, convArray did not work well. Rewriten for individual calls.

2014-02-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Object level caching in API Service.
	* Feature: Enabled XCLASS for object classes.
	* Feature: Alternate getEntryPointListByNameAndCityAndType in API Service.

2014-01-21 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Constant editor line selector control.
	* Feature: Object generation cached in APIService::_getLineList.

2013-08-23 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Fix: Missing implementation of INodeList::Sort in HangList.

2013-07-16 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: New sort method in INodeList implemented in child classes. Use a callback to sort using usort.

2013-07-13 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Instantiated nodes are put in a repository by externalCode or idx.
	* Feature: Recall node instance from repository in node getter when the node have a related idx or externalCode attribute.

2013-06-27 Pierrick Caillon <pierrick.caillon@plan-net.fr>