@@ -1,3 +1,6 @@
+2014-05-16 Pierrick Caillon <pierrick.caillon@plan-net.fr>
+	* Feature: Added database publication date update for automatic whole cache cleanup.
+
 2014-04-29 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Feature: Added CacheManager providing a cache action.
 
